--- a/carousel.css
+++ b/carousel.css
@@ -174,6 +174,10 @@
   width: 6px;
 }
 
+.two {
+  display: none;
+}
+
 /* add button */ /*
 .carousel-control-add::after,
 .carousel-control-add::before {
